# shogi4

./: .gitignore  CLAUDE.md  README.md  vercel.json
docs/: partial-run.md  research-brief.md
engine/: README-shogi4.md  batch_games.py  build-shogi4-engine.sh  diff_test.py  find_divergence.py  game-1.txt  game-2.txt  game-3.txt  game-4.txt  game-5.txt  game-6.txt  game-7.txt  game-8.txt  game-strong.txt  games.txt  gen_golden.py  gen_subgames.py  golden.txt  make_viewer.py  self_play.py  shogi4-friendlyjump.patch  shogi4.ini  shogi4.py  subgame_expected.txt  transition_test.py  validation_output.txt  watch_game.py
explorer/: README.md  clips.json  index.html  robots.txt  serve.py  sitemap.xml  test_codec.py  test_static_engine.mjs  vercel.json
explorer/pieces/: CREDITS.txt
research/: findings.md  open-questions.md  partial-run-result.txt  prior-art.md  session-2026-06-05.md
research/prior-art-evidence/: oca-shogi4-logic-decompiled.py
research/repro/: statespace_upperbound.py  upper_bound.txt
solver/: Cargo.toml
solver/src/: lib.rs  main.rs
solver/tests/: validation.rs
tools/: build-explorer-public.sh  gen_clips.py  gen_dark_cards.py  gen_game_replay.py  gen_rules_diagrams.py
